NIFI-13203: Include s3.url attribute in FetchS3Object, PutS3Object